[package]
authors = ["Coleman <ckirbyee92@gmail.com>"]
name = "rust-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = { version = "0.5", features = ["std"] }
chacha20poly1305 = "0.10"
rand = "0.9.2"
zeroize = { version = "1.7", features = ["derive"] }
secrecy = "0.10.3"
ark-std = "0.5.0"

[dev-dependencies]
tempfile = "3.23.0"
